fixed padding-left issue on narrow window

--- a/css/style.less
+++ b/css/style.less
@@ -284,10 +284,11 @@ nav.sca-menubar {
             bottom: 0px;
             
             .subbar-list-item {
-                padding: 5px 20px;
+                padding: 3px 20px;
                 box-sizing: border-box;
                 border: 3px solid transparent;
-                /*box-shadow: 0px -1px 1px #eee;*/
+                /*border-bottom: 1px solid #eee;*/
+                box-shadow: 0px -1px 1px #eee;
 
                 .list-header {
                     font-size: 16px;
@@ -330,6 +331,8 @@ nav.sca-menubar {
     }
 
     .sca-sidebar-page {
+        padding-left: 40px;
+
         .subbar {
             display: none;
             background-color: #fcfcfc;
